--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
+@import url("../public/css/plugins.css");
+@import url("../public/css/theme-styles.css");
+@import url("../public/css/blocks.css");
+@import url("../public/css/widgets.css");
+@import url("../public/css/font-awesome.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,8 +14,11 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+  scroll-behavior: smooth;
+  font-family: -apple-system, 
+  BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    
 }
 }
 
@@ -307,3 +315,4 @@ a {
     flex-direction: column;
   }
 }
+
