--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,27 +1,32 @@
-@import url("../public/css/plugins.css");
-@import url("../public/css/theme-styles.css");
-@import url("../public/css/blocks.css");
-@import url("../public/css/widgets.css");
-@import url("../public/css/font-awesome.css");
+@import url('../public/css/plugins.css');
+@import url('../public/css/theme-styles.css');
+@import url('../public/css/blocks.css');
+@import url('../public/css/widgets.css');
+@import url('../public/css/font-awesome.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-
 @layer base {
   html,
-body {
-  padding: 0;
-  margin: 0;
-  scroll-behavior: smooth;
-  font-family: -apple-system, 
-  BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    
+  body {
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
+    font-family:
+      -apple-system,
+      BlinkMacSystemFont,
+      Segoe UI,
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      Fira Sans,
+      Droid Sans,
+      Helvetica Neue,
+      sans-serif;
+  }
 }
-}
-
 
 @layer components {
   /* main */
@@ -50,7 +55,7 @@ body {
   }
 
   .community-card_btn {
-    @apply rounded-lg bg-primary-500 px-5 py-3 text-heading3-bold !text-light-1 ;
+    @apply rounded-lg bg-primary-500 px-5 py-3 text-heading3-bold !text-light-1;
   }
 
   /* thread card  */
@@ -68,7 +73,7 @@ body {
   }
 
   .user-card_btn {
-    @apply h-auto min-w-[74px] rounded-lg bg-primary-500 text-[12px] text-light-1 ;
+    @apply h-auto min-w-[74px] rounded-lg bg-primary-500 text-[12px] text-light-1;
   }
 
   .searchbar {
@@ -178,10 +183,8 @@ body {
 }
 
 .comment-form_btn {
-  @apply rounded-3xl bg-primary-500 px-8 py-2  text-light-1 max-xs:w-full ;
+  @apply rounded-3xl bg-primary-500 px-8 py-2  text-light-1 max-xs:w-full;
 }
-
-
 
 a {
   color: inherit;
@@ -191,7 +194,6 @@ a {
 * {
   box-sizing: border-box;
 }
-
 
 .container {
   min-height: 100vh;
@@ -262,8 +264,15 @@ a {
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family:
+    Menlo,
+    Monaco,
+    Lucida Console,
+    Liberation Mono,
+    DejaVu Sans Mono,
+    Bitstream Vera Sans Mono,
+    Courier New,
+    monospace;
 }
 
 .grid {
@@ -284,7 +293,9 @@ a {
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition:
+    color 0.15s ease,
+    border-color 0.15s ease;
 }
 
 .card:hover,
@@ -315,4 +326,3 @@ a {
     flex-direction: column;
   }
 }
-
